--- a/src/main/resources/templates/msgList.html
+++ b/src/main/resources/templates/msgList.html
@@ -2,38 +2,69 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Message List</title>
+    <!--bootstrap links-->
+    <div th:replace="base :: bootstrap-css"></div>
+
+    <!--bootstrap -->
+    <!--<th:block th:insert="base :: bootstrap-css"></th:block>-->
+    <!--style sheet-->
+    <nav th:replace="base :: navbar"></nav>
+
+    <link rel="stylesheet" type="text/css" href="css/StyleList.css"/>
+
+
 </head>
+
+
 <body>
+<!--my navbar-->
+<!--<nav th:replace="base :: navbar"></nav>-->
+<!--cardwill begin here-->
 
-<h1>MESSAGES</h1>
+<!--th:each="message : $messages placed in first div tag-->
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <article class="blog-card">
+                <div class="blog-card__background">
+                    <div class="card__background--wrapper">
+                        <div class="card__background--main" style="background-image: url('http://demo.yolotheme.com/html/motor/images/demo/demo_131.jpg');">
+                            <div class="card__background--layer"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-card__head">
+          <span class="date__box">
+            <span class="date__day">11</span>
+            <span class="date__month">JAN</span>
+          </span>
+                </div>
+                <div class="blog-card__info">
+                    <h5>Title: </h5>
+                    <p>
+                        <a href="#" class="icon-link mr-3"><i class="fa fa-pencil-square-o"></i> Posted By:</a>
+                        <a href="#" class="icon-link"><i class="fa fa-comments-o"></i> 150</a>
+                    </p>
+                    <!--message.content place here-->
+                    <p>Content: </p>
+                    <a href="#" class="btn btn--with-icon"><i class="btn-icon fa fa-long-arrow-right"></i>New Message</a>
+                </div>
+            </article>
+        </div>
+    </div>
+</div>
 
-<a href="/add">New Message</a>
+<!--<section class="detail-page">-->
+    <!--<div class="container mt-5">-->
 
-<table cellspacing="20">
-    <tr>
-            <th>Title</th>
-            <th>Content</th>
-            <th>Date Posted</th>
-            <th>Posted By</th>
-            <td>Actions</td>
-    </tr>
+    <!--</div>-->
+<!--</section>-->
 
-    <tr th:each="message : ${messages}">
-        <td th:text="${message.title}"></td>
-        <td th:text="${message.content}"></td>
-        <td th:text="${message.postedDate}"></td>
-        <td th:text="${message.postedBy}"></td>
 
-        <td>
-            <a th:href="@{/update/{id}(id=${message.id})}">Update</a> -
-            <a th:href="@{/detail/{id}(id=${message.id})}">Details</a> -
-            <a th:href="@{/delete/{id}(id=${message.id})}">Delete</a>
-        </td>
+<!--msg card will end here-->
 
-    </tr>
-
-</table>
-
+<!--js links-->
+<div th:replace="base :: javascript-link"></div>
 </body>
 </html>
